fix: Jackpot view fills device width. Don't squash jackpot image with long text.

--- a/src/components/Jackpots/Jackpots.scss
+++ b/src/components/Jackpots/Jackpots.scss
@@ -1,8 +1,4 @@
-.c-jackpots {
-  max-width: 375px;
-  width: 100%;
-}
-
 .c-jackpots-tile {
+  max-width: 375px;
   width: 85%;
 }
